<resources>
    <string name="app_name">IF Apps</string>
    <string name="judulFRS">FRS</string>
    <string name="judulTambahFRS">Tambah</string>
    <string name="textfield_label_email">Email</string>
    <string name="textfield_label_password">Password</string>
    <string name="textfield_label_login">Masuk</string>
    <string name="tv_title_masuk">Masuk</string>
    <string name="prasyarat">Prasyarat</string>
    <string name="ambil">ambil</string>
    <string name="home">Home</string>
    <string name="frs">FRS</string>
    <string name="pertemuan">Pertemuan</string>
    <string name="logout">Logout</string>
    <string name="pengumuman">Pengumuman</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="role">Role</string>
    <string name="daftar">Daftar</string>
    <string name="invitasi">Invitasi</string>
    <string name="buat_pertemuan">Buat Pertemuan</string>
    <string name="judul">Judul</string>
    <string name="tanggal">Tanggal</string>
    <string name="waktu_mulai">Waktu Mulai</string>
    <string name="waktu_selesai">Waktu Selesai</string>
    <string name="partisipan">Partisipan</string>
    <string name="pilih_partisipan">Pilih Partisipan</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="description">Description:</string>
    <string name="tambah">Tambah</string>
    <string name="batal">Batal</string>
    <string-array name="dropdownRole">
        <item>Student</item>
        <item>Lecturer</item>
        <item>Admin</item>
    </string-array>
    <string name="openDrawer">Open Drawer</string>
    <string name="closeDrawer">Close Drawer</string>
    <string name="hintPengumuman">Cari berdasarkan judul</string>
    <string name="tambahPengumuman"> Tambah Pengumuman</string>
    <string name="tags">Tags</string>
    <string name="simpan">Simpan</string>
    <string name="tagsPengumuman">Tags : </string>
    <string name="mataKuliah">Mata Kuliah</string>
    <string name="hyphen">-</string>
    <string name="organizer">Organizer:</string>
    <string name="kembali">Kembali</string>
    <string name="waktu">Waktu:</string>
    <string name="delete">HAPUS</string>
    <string name="lihatDetail">LIHAT DETAIL</string>
    <string name="next">Next</string>
    <string name="detail_pengumuman">Detail Pengumuman</string>
    <string name="detail_pertemuan">Detail Pertemuan</string>
    <string name="penyelenggara">Penyelenggara</string>
    <string name="tambah_tag">TAMBAH TAG</string>
    <string name="filter">Filter</string>
    <string name="tambah_pertemuan">Tambah Pertemuan</string>
    <string name="partisipan_pengumuman">Partisipan Pengumuman</string>
    <string name="lihatPartisipan">Lihat Partisipan</string>
    <string name="OnlyOrganizer">Hanya pemilik pertemuan yang dapat melihat daftar partisipan</string>
    <string name="sebelumnya">Sebelumnya</string>
    <string name="selanjutnya">Selanjutnya</string>
    <string name="tambah_slot_waktu">Tambah Slot Waktu</string>
    <string name="tambah_tag_pengumuman">Tambah Tag Pengumuman</string>
    <string name="hintMatkul">Cari berdasarkan nama mata kuliah</string>
    <string name="hasilPencarianMatkul">Hasil Pencarian Mata Kuliah</string>
    <string name="matkulTerpilih">Mata Kuliah Terpilih</string>
    <string name="terima">Terima</string>
    <string name="telahDiterima">Sudah Diterima</string>
    <string name="tambahTag">Tambah Tag</string>
    <string name="tag">Tag</string>
    <string-array name="dropdownHari">
        <item>Senin</item>
        <item>Selasa</item>
        <item>Rabu</item>
        <item>Kamis</item>
        <item>Jumat</item>
        <item>Sabtu</item>
        <item>Minggu</item>
    </string-array>
    <string name="namaMatakuliah">Nama Mata Kuliah</string>
    <string name="mataKuliahYangAkanDiEnroll">Mata kuliah yang akan di-enroll</string>
    <string name="infoPentingFRS">Penting! Hanya dapat enroll satu mata kuliah per satu kali enroll!</string>
    <string name="partisipan_default_hint">Cari berdasarkan nama</string>
    <string name="lihat_invitasi">Lihat Invitasi</string>
    <string name="detail_invitasi">Detail Invitasi</string>
</resources>