<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="@dimen/_4dp"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/judulTambahFRS"
            app:titleCentered="true"
            />

    </com.google.android.material.appbar.AppBarLayout>




    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_layout"
        android:paddingLeft="@dimen/_16dp"
        android:paddingRight="@dimen/_16dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.appcompat.widget.SearchView
                android:id="@+id/search_bar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:background="@drawable/custom_kotak_filter_pengumuman"
                app:queryHint="@string/hintMatkul"
                />

            <TextView
                android:id="@+id/tv_hasil_pencarian_matkul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hasilPencarianMatkul"
                android:layout_below="@id/search_bar"
                android:layout_margin="@dimen/_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sp"></TextView>

            <ListView
                android:id="@+id/tv_lv_matkul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/tv_hasil_pencarian_matkul"
                android:layout_margin="@dimen/_10dp">

            </ListView>

            <TextView
                android:id="@+id/tv_matkul_terpilih"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/matkulTerpilih"
                android:layout_below="@id/tv_lv_matkul"
                android:layout_margin="@dimen/_10dp"
                android:textColor="@color/black"
                android:textSize="@dimen/_15sp"></TextView>

            <TextView
                android:id="@+id/tv_info_penting"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/red"
                android:textSize="@dimen/_10sp"
                android:text="@string/infoPentingFRS"
                android:layout_marginLeft="@dimen/_10dp"
                android:layout_below="@id/tv_matkul_terpilih"></TextView>

            <com.google.android.material.card.MaterialCardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/_10dp"
                android:layout_below="@id/tv_info_penting"
                >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <ListView
                        android:id="@+id/tv_lv_matkuldipilih"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                    </ListView>
                </LinearLayout>


            </com.google.android.material.card.MaterialCardView>

        </RelativeLayout>



    </ScrollView>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/btn_add_matkul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_16dp"
        android:layout_marginTop="@dimen/_16dp"
        android:layout_marginEnd="@dimen/_16dp"
        android:layout_marginBottom="@dimen/_16dp"
        android:backgroundTint="?attr/colorAccent"
        android:src="@android:drawable/ic_input_add" />

</RelativeLayout>