<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appbar_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white"
        app:elevation="@dimen/_4dp"
        >

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            app:navigationIcon="@drawable/ic_baseline_close_24"
            app:title="@string/tambahPengumuman"
            app:titleCentered="true"
            />

    </com.google.android.material.appbar.AppBarLayout>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/appbar_layout"
        android:paddingLeft="@dimen/_16dp"
        android:paddingRight="@dimen/_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_judul"
                android:layout_marginLeft="@dimen/_20sp"
                android:layout_marginRight="@dimen/_20sp"
                android:layout_marginTop="@dimen/_20sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/judul"/>

                <EditText
                    android:id="@+id/et_judul"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sp"
                    android:hint="Masukkan judul pengumuman disini"
                    android:background="@drawable/custom_kotak_filter_pengumuman"
                    android:layout_marginTop="@dimen/_10sp"
                    android:paddingLeft="@dimen/_10sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/ll_tag"
                android:layout_below="@id/ll_judul"
                android:layout_marginLeft="@dimen/_20sp"
                android:layout_marginRight="@dimen/_20sp"
                android:layout_marginTop="@dimen/_20sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tags"/>

                <EditText
                    android:id="@+id/et_tag"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_40sp"
                    android:hint="Masukkan tag pengumuman disini"
                    android:background="@drawable/custom_kotak_filter_pengumuman"
                    android:layout_marginTop="@dimen/_10sp"
                    android:paddingLeft="@dimen/_10sp"/>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/ll_tag"
                android:layout_marginLeft="@dimen/_20sp"
                android:layout_marginRight="@dimen/_20sp"
                android:layout_marginTop="@dimen/_20sp"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/deskripsi"/>

                <EditText
                    android:id="@+id/et_deskripsi"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/_300sp"
                    android:hint="Masukkan deskripsi pengumuman disini"
                    android:background="@drawable/custom_kotak_filter_pengumuman"
                    android:paddingTop="@dimen/_10sp"
                    android:gravity="top"
                    android:layout_marginTop="@dimen/_10sp"
                    android:paddingLeft="@dimen/_10sp"/>

            </LinearLayout>

            <Button
                android:id="@+id/btn_simpan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/simpan"
                android:layout_alignParentBottom="true"
                android:layout_marginRight="@dimen/_20sp"
                android:layout_marginLeft="@dimen/_20sp"
                android:layout_marginTop="@dimen/_15sp"/>


        </LinearLayout>



    </ScrollView>


</RelativeLayout>