<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/tv_judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="MBKM Magang"
        android:textSize="@dimen/_20sp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_10sp"
        android:textStyle="bold"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_judul"
        android:id="@+id/ll_tags"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_hashtag"
            android:layout_marginLeft="@dimen/_20sp"
            android:text="@string/tagsPengumuman"/>

        <TextView
            android:id="@+id/tv_tags"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/_10sp"
            android:layout_gravity="center"/>

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
<<<<<<< Updated upstream
        android:id="@+id/tv_content"
        android:layout_below="@id/ll_tags"
        android:layout_marginTop="@dimen/_20dp"
        android:layout_marginLeft="@dimen/_20dp"
        android:layout_marginRight="20sp"/>

    <Button
        android:id="@+id/btn_kembali"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/kembali"/>
=======
        android:layout_below="@id/appbar_layout"
        android:paddingLeft="@dimen/_16dp"
        android:paddingRight="@dimen/_16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/_16dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Title"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="@dimen/_24sp"
                android:textStyle="bold"
                />

            <TextView
                android:id="@+id/tv_tags"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawableLeft="@drawable/ic_hashtag"
                android:gravity="center_vertical"
                android:text="@string/tags"
                android:textSize="@dimen/_16sp"
                android:layout_marginTop="@dimen/_15sp"
                android:textColor="@color/black"
                />

            <TextView
                android:id="@+id/tv_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_10sp"
                android:text="Content"
                android:textSize="@dimen/_16sp"
                android:textColor="@color/black"
                />



        </LinearLayout>

    </ScrollView>
>>>>>>> Stashed changes

</RelativeLayout>